dataset1235/2025-2/2947369575/users/3556712823/executions/1003782500_1626817775.log
== RUN (2025-08-27 23:01:57)
-- CODE: 
raio = (input ("Qual o valor do raio?"))
math = pi
print (math*(r**2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    math = pi
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:06:21)
-- CODE: 
import math
raio = float(input ("Qual o valor do raio?"))
A = math.pi*raio**2
V = (4/3)*math.pi*raio**3
print(round (A, 3))
print (round (V, 3))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:14)
-- CODE: 
raio = (input ("Qual o valor do raio?"))

print ((math(pi))*raio**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ((math(pi))*raio**2)
            ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:05:25)
-- CODE: 
import math
raio = float(input ("Qual o valor do raio?"))
A = math.pi*raio**2
V = (4/3)*math.pi*raio**3
print(round (A, 3))
print (round (V, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:05:04)
-- CODE: 
import math
raio = float(input ("Qual o valor do raio?"))
A = math.pi*r**2
V = (4/3)*math.pi*r**3
print(round (A, 3))
print (round (V, 3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    A = math.pi*r**2
                ^
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:38)
-- CODE: 
raio = (input ("Qual o valor do raio?"))

print (math(pi)*raio**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (math(pi)*raio**2)
           ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:29)
-- CODE: 
raio = (input ("Qual o valor do raio?"))

print ((math(pi)*raio**2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print ((math(pi)*raio**2)
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:00:08)
-- CODE: 
raio = (input ("Qual o valor do raio?"))

print ((math(pi))*raio**2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print ((math(pi))*raio**2
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
